clusters/my-cluster/apps/dev/rss-api/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-api
  template:
    metadata:
      labels:
        app: rss-api
    spec:
      containers:
        - name: rss-api
          image: ghcr.io/ceddy-cedd/k3s-resume-platform/rss-api:build-16 # {"$imagepolicy": "dev:rss-api"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
